# thinking-with-types

./: README.md  thinking-with-types.cabal
src/: Chapter01.hs  Chapter02.hs  Chapter03.hs  Chapter05.hs  Chapter06.hs  Chapter07.hs  Irc.hs
