name:                thinking-with-types
version:             0.1.0.0
homepage:            https://github.com/v0d1ch/thinking-with-types#readme
license:             BSD3
license-file:        LICENSE
author:              Sasa Bogicevic
maintainer:          t4nt0r@protonmail.com
copyright:           2019 Sasa Bogicevic
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable thinking-with-types
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , transformers
